# pixel_clusterizer

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
examples/: add_cluster_calculation.py  add_cluster_event_info.py  cluster.py  different_data_types.py  howto_use.py
pixel_clusterizer/: __init__.py  cluster_functions.py  clusterizer.cpp  clusterizer.py  clusterizer.pyx  clusterizer2.py  data_struct.pxd  data_struct.py
pixel_clusterizer/cpp/: Basis.cpp  Basis.h  Clusterizer.cpp  Clusterizer.h  defines.h
pixel_clusterizer/testing/: test_clusterizer.py  test_data_types.py  test_hit_masking.py
pixel_clusterizer/tests/: test_clusterizer.py
pyPixelClusterizer/: clusterizer.cpp  clusterizer_wrapper.cpp  data_struct.py  hit_clusterizer.cpp
pyPixelClusterizer/cpp/: Clusterizer.cpp  Clusterizer.h  defines.h
tests/: test_clusterizer.py  test_clusterizer2.py
